--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ spring.servlet.multipart.max-request-size=100MB
 imgLocation=C:/visit/fa
 uploadPath=file:///C:/visit/
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=shakijudy@gmail.com
+spring.mail.password=tflp bqgy uzsv zxmx
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+
