--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
